--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "google-spreadsheet": "^3.0.13",
     "material-ui": "^0.20.2",
     "next": "10.0.3",
